fixing number and gap number list

--- a/src/input.css
+++ b/src/input.css
@@ -35,6 +35,7 @@
         height: 100vh;
         width: 100vw;
         position: fixed;
+        z-index: 9;
     }
     .button {
         display: flex;
@@ -59,10 +60,10 @@
     .number-list-grid {
         display:grid;
         grid-template-columns: 1fr 6fr; 
-        grid-template-rows: 1fr 6fr;
+        grid-template-rows: 1fr 3fr;
         column-gap:1rem;
         row-gap:0.5rem;
-        margin-bottom:1rem;
+        margin-bottom: 2rem;
     }
     .number-list-number{
         grid-area: 1 / 1 / 2 / 2;
@@ -70,14 +71,23 @@
         border-radius: 1.5rem;
         text-align: center;
         color:white;
-        padding: 0.5rem 1.5rem;
+        padding: 0.5rem 1rem;
+        z-index: 7;
+        align-self: center;
     }
     .number-list-heading{
         grid-area: 1 / 2 / 2 / 3;
         align-self:center;
         font-weight: bold;
-        color:var(--clr-blue-200)
-
+        color:var(--clr-blue-200);
+    }
+    @media screen and (max-width:767px) {
+        .number-list-heading{
+        background-color:var(--clr-red-100);
+        box-shadow: 100px 0 0 0px var(--clr-red-100), -50px 0 0 0px var(--clr-red-100);  
+        padding: 0.5rem 0;
+        z-index: 6;
+    }
     }
     .number-list-text {
         grid-area: 2 / 1 / 2 / 3; 
@@ -89,10 +99,6 @@
         } 
         .number-list-grid{ 
             column-gap:2rem;
-        }
-        .number-list-number{
-            justify-self: center;
-            align-self: center;
         }
     }
 }
